<resources>
    <string name="app_name">Social Status Saver</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>

    <string name="step_1">Step 1</string>
    <string name="first_step">Tap on icon to open Whatsapp and First you have to see Status from Whatsapp</string>
    <string name="wa_first_step">Tap on icon to open WA Business and First you have to see Status from Whatsapp Business</string>
    <string name="step_2">Step 2</string>
    <string name="second_step">Once you seen Status in Whatsapp then open this application</string>
    <string name="wa_second_step">Once you seen Status in Whatsapp Business then open this application</string>
    <string name="step_3">Step 3</string>
    <string name="step_three">Your seen status will be here in this app and from here you can Download and Share</string>

    <string name="whatsapp">WhatsApp</string>
    <string name="wa_business">WA Business</string>
    <string name="tiktok">Tiktok</string>
    <string name="fb">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="gallery">Gallery</string>
    <string name="likee">Likee</string>
    <string name="how_to_use">How To Use?</string>
    <string name="download_from_private_account">Download from private account</string>
    <string name="recent_status">Recent status</string>
    <string name="help">Help</string>
    <string name="my_ac">"My Account"</string>
    <string name="paste_link">Paste Link</string>
    <string name="need_per">Need Storage Permission</string>
    <string name="grant">Grant</string>

    <!--insta-->
    <string name="dl_started" translatable="false">Download started</string>
    <string name="downloaded" translatable="false">Media downloaded successfully</string>
    <string name="downloading" translatable="false">"Please wait...Downloading Media"</string>
    <string name="write_permission_msg">Write Storage permission is required to save videos and images</string>
    <string name="yes">Yes</string>
    <string name="permission_req">Permission Required</string>
    <string name="instagram_not_found">Please Install Instagram First For Use This App.</string>

    <!--likee-->
    <string name="likee_not_found">Please Install Likee First For Use This App.</string>

    <!--tiktok-->
    <string name="step_4">Step 4</string>
    <string name="tiktok_not_found">Please Install Tiktok First For Use This App.</string>

    <!--twitter-->
    <string name="twitter_not_found">Please Install Twitter First For Use This App.</string>

    <!--admob ids-->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <!-- ca-app-pub-4970909843127323~9768313657 -->

    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <!-- ca-app-pub-4970909843127323/8707347570 -->

    <string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <!-- ca-app-pub-4970909843127323/6081184234 -->

    <!--fb ad ids-->
    <string name="fbad_banner_id">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="fbad_interstitial_id">VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID</string>

</resources>
