<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/help"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/help_text"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/how_to_use"/>

    <ScrollView
        android:layout_below="@+id/help"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="center"
            app:cardBackgroundColor="@color/help_bg"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/step_1"
                        android:gravity="center"
                        android:textColor="@color/help_text"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/help1"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    tools:src="@drawable/help_1"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_20sdp"
                    android:text="@string/first_step"
                    android:textColor="@color/help_text"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/step_2"
                        android:gravity="center"
                        android:textColor="@color/help_text"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/help2"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    tools:src="@drawable/help_2"/>

                <TextView
                    android:id="@+id/textView4"
                    android:paddingBottom="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/second_step"
                    android:textColor="@color/help_text"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/step_3"
                        android:textColor="@color/help_text"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/help3"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    tools:src="@drawable/help_3"/>

                <TextView
                    android:id="@+id/textView6"
                    android:paddingBottom="@dimen/_20sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/step_three"
                    android:textColor="@color/help_text"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

</RelativeLayout>
